Wed Apr 24 03:14:11 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* tests/MT_Reactor_Upcall_Test.cpp: Fix warnings on threads=0
	build.

Tue Apr 23 16:01:47 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Prevented the Miop/McastHello test from
	  running in SUNCC51 builds. SUNCC51 is too broken. Time to remove
	  the build of the scoreboard.

Tue Apr 23 11:31:43 2002  Ossama Othman  <ossama@uci.edu>

	* ace/Dev_Poll_Reactor.inl (ACE_Dev_Poll_Handler_Guard):
	  (~ACE_Dev_Poll_Handler_Guard):

	  Added "todo" comments about suspending and resuming the event
	  handler before and after the upcall, respectively.

Tue Apr 23 11:38:40 2002  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/Makefile: Rearranged to build all the examples.

Tue Apr 23 13:32:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Reactor/Makefile.bor:
          Added Proactor directory

        * examples/Reactor/Proactor/Makefile.bor:
          Added this BCB makefile

        * examples/Reactor/Proactor/*.cpp
          Made all files compiling when doing a wchar build.

Tue Apr 23 10:03:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Reactor/Makefile.bor:
          Added WFMO_Reactor directory

        * examples/Reactor/WFMO_Reactor/Makefile.bor:
          Added this BCB makefile

        * examples/Reactor/WFMO_Reactor/*.cpp
          Fixed several unused argument warnings that appeared with bcb.
          Made all files compiling when doing a wchar build.

Tue Apr 23 07:35:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Base_Thread_Adapter.h:
        * ace/Future.h:
        * ace/Naming_Context.h:
        * ace/Malloc.h:
        * ace/Malloc_Base.h:
        * ace/Malloc_T.h:
        * ace/NT_Service.h:
        * ace/Notification_Strategy.h:
        * ace/Object_Manager.h:
        * ace/OS_Thread_Adapter.h:
        * ace/WIN32_Asynch_IO.h: